--- a/src/css/scss/_config.scss
+++ b/src/css/scss/_config.scss
@@ -14,7 +14,7 @@ $font-color: #4A4A4A; // Default font color
 // Typography
 // -------
 $header-font-color:          #444444 !default;
-$body-font-family:          'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif, 'Roboto';
+$body-font-family:          Helvetica, Arial, sans-serif, 'Lato';
 $body-font-weight:          400 !default;
 $body-font-size:            14px !default;
 $body-font-color:           #4A4A4A !default;
