--- a/src/emails/2016EmployerSurvay.hbs
+++ b/src/emails/2016EmployerSurvay.hbs
@@ -7,13 +7,13 @@ preheader: Where Have All My Candidates Gone?
 <span class="preheader">{{ preheader }}</span>
 <!-- .header -->
 <div class="header">
-  <table cellpadding="0" cellspacing="0">
+  <table cellpadding="0" cellspacing="0" border="0">
 	  <tr>
 	  	{{> padding orientation='h' size='52' bg-color='grey' hide-on-mobile='n' table-cell='d' }}
 	  <tr>
     <tr>
       <td align="center" >
-        <a href="http://rethinkdata.net"><img class="logo" src="../src/img/reThinkData.png" width="261" height="35" alt="Rethink Data"></a>
+        <a href="http://rethinkdata.net"><img class="logo" src="http://www.hrmarketer.com/web/wp-content/uploads/2016/02/reThinkData.png" width="261" height="35" alt="Rethink Data"></a>
       </td>
     </tr>
     <tr>
@@ -22,24 +22,24 @@ preheader: Where Have All My Candidates Gone?
   </table>
 </div>
 <!-- .main welcome -->
-<table class="main" cellpadding="0" cellspacing="0">
+<table class="main" cellpadding="0" cellspacing="0" border="0">
   <tr>
     <td class="wrapper">
-      <table cellpadding="0" cellspacing="0">
+      <table cellpadding="0" cellspacing="0" border="0">
 	      <tr>
 		      <td align="center" >
-		        <a href="https://www.surveymonkey.com/r/GL78Z8F"><img src="../src/img/email_header.gif" width="600" height="320" alt="Where Have All My Candidates Gone?"></a>
+		        <a href="https://www.surveymonkey.com/r/GL78Z8F"><img src="http://www.hrmarketer.com/web/wp-content/uploads/2016/02/email_header.gif" width="600" height="320" alt="Where Have All My Candidates Gone?"></a>
 		      </td>
 		    </tr>
         <tr>
 	        <td>
 		        <!-- padding left and right -->
-		        <table class="wrapper" cellpadding="0" cellspacing="0">
+		        <table class="wrapper" cellpadding="0" cellspacing="0" border="0">
 			        <tr>
 				        {{> padding orientation='v' size='52' bg-color='white' hide-on-mobile='n' table-cell='d' }}
 			          <td>
 				          <!-- copy block -->
-			            <table class="wrapper" cellpadding="0" cellspacing="0">
+			            <table class="wrapper" cellpadding="0" cellspacing="0" border="0">
 				            <tr>
 									  	{{> padding orientation='h' size='52' bg-color='white' hide-on-mobile='n' table-cell='d' }}
 									  <tr>
@@ -105,12 +105,12 @@ preheader: Where Have All My Candidates Gone?
         <tr>
 	        <td>
 		        <!-- padding left and right -->
-		        <table class="wrapper" cellpadding="0" cellspacing="0">
+		        <table class="wrapper" cellpadding="0" cellspacing="0" border="0">
 			        <tr>
 				        {{> padding orientation='v' size='52' bg-color='white' hide-on-mobile='n' table-cell='d' }}
 			          <td>
 				          <!-- copy block -->
-			            <table class="wrapper" cellpadding="0" cellspacing="0">
+			            <table class="wrapper" cellpadding="0" cellspacing="0" border="0">
 				            <tr>
 									  	{{> padding orientation='h' size='36' bg-color='white' hide-on-mobile='n' table-cell='d' }}
 									  <tr>
@@ -127,7 +127,7 @@ preheader: Where Have All My Candidates Gone?
 												Located in Hunt Valley, Maryland, reThinkData is an exciting integration solutions company established by recognized technology leaders in the online recruitment industry. reThinkData’s <i>universal connector, SimpleAPI,</i> solves industry integration problems for the benefit of industry-wide stakeholders. This eco-system solution approach is the result of decades of experience supporting complex integration applications. SimpleAPI addresses a very technical problem with a non-technical, user-friendly interface. More importantly, it enables customers to reduce resources and costs related to integrations and focus on their core business—not on complex data integrations such as initial configuration, upgrades, and ongoing maintenance. For more information, contact:
 												<br /><br /><br />
 
-												<a href="http://rethinkdata.net"><img src="../src/img/reThinkDataSignOff.png" width="193" height="26" alt="Rethink Data"></a>
+												<a href="http://rethinkdata.net"><img src="http://www.hrmarketer.com/web/wp-content/uploads/2016/02/reThinkDataSignOff.png" width="193" height="26" alt="Rethink Data"></a><br />
 												<b>reThinkData LLC</b><br />
 												260 Schilling Circle Suite 2<br />
 												Hunt Valley, MD 21031<br />
@@ -154,7 +154,7 @@ preheader: Where Have All My Candidates Gone?
 </table>
 <!-- .footer -->
 <div class="footer">
-  <table cellpadding="0" cellspacing="0">
+  <table cellpadding="0" cellspacing="0" border="0">
 	  <tr>
 			{{> padding orientation='h' size='20' bg-color='darkgrey' hide-on-mobile='n' table-cell='d' }}
 		</tr>
