--- a/src/partials/components/host.hbs
+++ b/src/partials/components/host.hbs
@@ -7,7 +7,7 @@
 		google-department: (string) accepts text
 }}
 
-<table class="host" cellpadding="0" cellspacing="0">
+<table class="host" cellpadding="0" cellspacing="0" border="0">
 	<tr>
 		<!-- .host-img one -->
 		{{> padding orientation='v' size='48' bg-color='darkgray' hide-on-mobile='no' }}
