--- a/src/css/scss/_buttons.scss
+++ b/src/css/scss/_buttons.scss
@@ -10,9 +10,9 @@
 		color: #FFFFFF !important;
 		cursor: pointer;
 		display: inline-block;
-		line-height: 260%;
+		line-height: 250%;
 		text-align: center;
-		font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif, 'Lato';
+		font-family: Helvetica, Arial, sans-serif, 'Lato';
 		font-size: 24px;
 		font-weight: 400;
 		text-decoration: none !important;
