--- a/src/css/scss/_global.scss
+++ b/src/css/scss/_global.scss
@@ -18,7 +18,7 @@ img {
 }
 
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif, 'Lato';
+  font-family: Helvetica, Arial, sans-serif, 'Lato';
   -webkit-font-smoothing: antialiased;
   font-size: 14px;
   height: 100% !important;
