--- a/src/partials/components/divider.hbs
+++ b/src/partials/components/divider.hbs
@@ -1,10 +1,10 @@
-<table class="divider-wrapper" cellpadding="0" cellspacing="0">
+<table class="divider-wrapper" cellpadding="0" cellspacing="0" border="0">
 	<tr>
 		<td class="divider-spacer">
 			<table class="divider" cellpadding="0" cellspacing="0">
 				<tr>
 					<td>
-						<img alt="spacer" src="../dist/img/spacer.gif" />
+						<img alt="spacer" src="http://www.hrmarketer.com/web/wp-content/uploads/2016/02/spacer.gif" />
 					</td>
 				</tr>
 			</table>
