--- a/src/partials/components/padding.hbs
+++ b/src/partials/components/padding.hbs
@@ -8,5 +8,5 @@
 		table-cell: (string) accepts 'd', 'h'
 }}
 <t{{ table-cell }} class="{{ orientation }}-padding-{{ size }} bg-{{ bg-color }} hide-{{ hide-on-mobile }} {{ table-cell }}">
-	<img alt="spacer" src="../dist/img/spacer.gif" />
+	<img alt="spacer" src="http://www.hrmarketer.com/web/wp-content/uploads/2016/02/spacer.gif" />
 </t{{ table-cell }}>
