--- a/src/partials/components/rule.hbs
+++ b/src/partials/components/rule.hbs
@@ -5,5 +5,5 @@
 		mobile: (string) accepts 'd', 'h'
 }}
 <t{{ drop }} class="{{ orientation }}-rule-{{ drop }}">
-	<img alt="spacer" src="../dist/img/spacer.gif" />
+	<img alt="spacer" src="http://www.hrmarketer.com/web/wp-content/uploads/2016/02/spacer.gif" />
 </t{{ drop }}>
